cleaned out two such-as-like endnote references.

--- a/hwh.tex
+++ b/hwh.tex
@@ -41,7 +41,9 @@ provides for embedding domain specific languages(EDSLs).
   functionality.
   Designing a language from scratch would require writing a parser, code generator / interpreter and possibly a
   debugger, not to mention all the routine stuff that every language
-  needs like\eref{such-as-like} variables, control structures and 
+  needs like\endnote{%
+  Consider using ``such as'' in place of ``like''.
+}\elabel{such-as-like} variables, control structures and 
   arithmetic types.
   All of the aforementioned are provided by the host language; in this case \progLang{Haskell}.
   Examples for the same can be found here \cite{jones2001composing, meyer2008eiffel} which talk about introducing
