cleaned out two such-as-like endnote references.

--- a/embedding.tex
+++ b/embedding.tex
@@ -105,10 +105,7 @@ enables encoding of search problems\yyy{}{in \progLang{Haskell} rather than
 \section{Related Books}
 \textcolor{blue}{Perhaps the section title should be ``Books related to embedding Programming Languges''.}
 
-As \progLang{Haskell} is relatively new in terms of being popular, its predecessors such as\endnote{%
-  Consider using ``such as'' in place of ``like''.
-}\elabel{such-as-like}
-\progLang{Scheme} have
+As \progLang{Haskell} is relatively new in terms of being popular, its predecessors such as \progLang{Scheme} have
 explored the territory of embedding  quite profoundly \cite{friedman05reasoned}, which aims at adding a few
 constructs to the language to bring together both styles of declarative programming and capture the essence of
 \progLang{Prolog}.
