space changes only in multiparadigm.tex

--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -28,14 +28,12 @@ languages that combine two of the most widespread declarative programming styles
 
 A peak into language classification reveals that it is not always a straight forward task to segregate languages
 according to their features and characteristics.
-It turns out that there are a number of notions which play a role in deciding where the language
-belongs. 
+It turns out that there are a number of notions which play a role in deciding where the language belongs.
 Often a language ends up being a part of almost all paradigms due to extensive libraries.
 Simply speaking, a multi paradigm programming language is a programming language that supports more than one
 programming paradigm \cite{Krishnamurthi:2008:TPL:1480828.1480846}.Moreover, as Timothy Budd puts it
-\cite{website:wikimultiparadigm} ``The idea of a multi paradigm language is to provide a framework in
-which programmers can work in a variety of styles, freely intermixing constructs from different
-paradigms.''
+\cite{website:wikimultiparadigm} ``The idea of a multi paradigm language is to provide a framework in which
+programmers can work in a variety of styles, freely intermixing constructs from different paradigms.''
 
 
 \section{The Informal Content from Blogs, Articles and Internet Discussions}
@@ -43,46 +41,46 @@ paradigms.''
   
 \subsection{Multi Paradigm Languages}
 
-  A lot has been said and discussed on\endnote{%
+A lot has been said and discussed on\endnote{%
     ``discussed on'' does not work.
 }
-  coming to clear grounds about the classification of programming languages.
-  If the conventional ideology\endnote{%
+coming to clear grounds about the classification of programming languages.
+If the conventional ideology\endnote{%
     What is the ``conventional ideology'' here?  As defined where?
 }
-  is considered then the scope of each language is pretty much infinite as small
-  extension modules replicate different feature sets which are not naturally native to the language itself.
-  The definitions of multi paradigm languages across the web
-  \cite{website:wikimultiparadigm,website:mdn,website:blogc2} converge to roughly the same thing that of providing
-  a framework to work with different styles with a list of languages \cite{website:wikimpllist,website:dmoz} that
-  ticks the boxes.\endnote{%
+is considered then the scope of each language is pretty much infinite as small extension modules replicate
+different feature sets which are not naturally native to the language itself.
+The definitions of multi paradigm languages across the web
+\cite{website:wikimultiparadigm,website:mdn,website:blogc2} converge to roughly the same thing that of providing a
+framework to work with different styles with a list of languages \cite{website:wikimpllist,website:dmoz} that ticks
+the boxes.\endnote{%
     Yet another metaphor that doesn't spin my wheels.
 }
-  Generally speaking, it\endnote{%
+Generally speaking, it\endnote{%
     What is ``it'' here?
 }
-  does not feel all that hot or popular in programming circles; one reason could be that it\endnote{%
-    What is ``it'' here?  Is this the same ``it'' as above?
+does not feel all that hot or popular in programming circles; one reason could be that it\endnote{%
+  What is ``it'' here?  Is this the same ``it'' as above?
 }
-  is a very broad topic and specifying details can clear the fog.\endnote{%
+is a very broad topic and specifying details can clear the fog.\endnote{%
     Which fog?
 }
 
 \subsection{Functional Logic Programming Languages}
 
-  Continuing from the previous section, narrowing down the search by considering only multi paradigm declarative
-  languages namely, functional logical programming languages.
-  By doing so a large amount of information pops up, from articles that give brief description and mentions
-  \cite{website:wikiflpl, website:wikiflpllist} to the implementing techniques \cite{website:imlpementingflpl}
-  which give a brief overview of the aim and also the backdrop of publications.\endnote{%
-    What do you mean by ``backdrop of [the] publications''?
+Continuing from the previous section, narrowing down the search by considering only multi paradigm declarative
+languages namely, functional logical programming languages.
+By doing so a large amount of information pops up, from articles that give brief description and mentions
+\cite{website:wikiflpl, website:wikiflpllist} to the implementing techniques \cite{website:imlpementingflpl} which
+give a brief overview of the aim and also the backdrop of publications.\endnote{%
+  What do you mean by ``backdrop of [the] publications''?
 }
 
-  The jackpot however is the fact that there is a dedicated website \cite{website:funclogprog} for the history,
-  research and development, existing languages, the literature, the contacts and everything else that one can think
-  of for functional logic languages.
-  As a matter of fact the holy grail of information is maintained by two of the most important people in the field
-  Michael Hanus \cite{website:mhanus} and Sergio Antoy \cite{website:santoy}.
+The jackpot however is the fact that there is a dedicated website \cite{website:funclogprog} for the history,
+research and development, existing languages, the literature, the contacts and everything else that one can think
+of for functional logic languages.
+As a matter of fact the holy grail of information is maintained by two of the most important people in the field
+Michael Hanus \cite{website:mhanus} and Sergio Antoy \cite{website:santoy}.
 
 
 %\end{description}
@@ -91,10 +89,10 @@ paradigms.''
 \section{Literature and Publications}
 %\begin{description}
 \subsection{Multi Paradigm Languages}
-  Possibly one of the most important works towards bringing programming styles together is the book by C.A.R.
-  Hoare \cite{hoare1998unifying} which points out that among the large number of programming paradigms and/or
-  theories the unification theory serves as a complementary rather than a replacement to relate the universe.
-  As as always since we are talking about \progLang{Haskell} we have to\endnote{%
+Possibly one of the most important works towards bringing programming styles together is the book by C.A.R.
+Hoare \cite{hoare1998unifying} which points out that among the large number of programming paradigms and/or
+theories the unification theory serves as a complementary rather than a replacement to relate the universe.
+As as always since we are talking about \progLang{Haskell} we have to\endnote{%
   Use ``must'' in place of ``have to'' where you can.
 }\elabel{must-have-to} include monads and unifying theories using
   monads \cite{gibbons2013unifying}.
@@ -136,21 +134,24 @@ Although the language can do a lot but gaps do exist, such as the improvement of
 
 \section{Some Multi Paradigm Languages}
 
-The list of multi paradigm languages is huge, but in this thesis we will mostly stick to functional logical programming languages. Beginning with functional hybrids, a small project language called \progLang{Virgil} \cite{website:virgil}, combines
-objects to work with functions and procedures.
+The list of multi paradigm languages is huge, but in this thesis we will mostly stick to functional logical
+programming languages. Beginning with functional hybrids, a small project language called \progLang{Virgil}
+\cite{website:virgil}, combines objects to work with functions and procedures.
 On similar lines is \progLang{Common Object Lisp System (CLOS)} \cite{website:closwiki}.
 This can be justified\yyy{}{\Large,}\endnote{%
   Add the comma, then remove this endnote.
 }
 as object oriented programming has been \yyy{one of the most}{a} dominant styles of programming\yyy{ and
-hence even}{Even} \progLang{Haskell} has one called \progLang{O'Haskell} \cite{website:ohaskell}\yyy{}{\Large,}\endnote{%
+hence even}{Even} \progLang{Haskell} has one called \progLang{O'Haskell}
+\cite{website:ohaskell}\yyy{}{\Large,}\endnote{% 
   Add the comma, then remove this endnote.
-} though it last saw a
-release back in 2001.
-Another prominent implementation is \progLang{OCaml} \cite{website:ocamlwiki,website:ocamllang}\yyy{}{\Large,}\endnote{%
+}
+though it last saw a release back in 2001.
+Another prominent implementation is \progLang{OCaml}
+\cite{website:ocamlwiki,website:ocamllang}\yyy{}{\Large,}\endnote{% 
   Add the comma, then remove this endnote.
-} which adds object
-oriented capabilities \yyy{with}{to} a powerful type system and module support.
+}
+which adds object oriented capabilities \yyy{with}{to} a powerful type system and module support.
 This is the case with most of the languages in this section hardly a few have survived as the new ones incorporated
 the positives of the old.\endnote{%
   I do not understand the preceding sentence at all.
@@ -228,7 +229,9 @@ With a book \cite{friedman05reasoned} and an implementation to accompany
 which seems to have translated into \progLang{Haskell}, 
 \cite{website:haskellkanren,website:molog,website:minikanrent}. 
 
-Finally talking about \progLang{Curry}, one of the most popular \progLang{Haskell} based multi paradigm languages with support for deterministic and non-deterministic computations. Contributing to the same there have been some predecessors \cite{website:alf,website:toy}.       
+Finally talking about \progLang{Curry}, one of the most popular \progLang{Haskell} based multi paradigm languages
+with support for deterministic and non-deterministic computations. Contributing to the same there have been some
+predecessors \cite{website:alf,website:toy}.        
 
 
 \section{Chapter Recapitulation}
